--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "learning-nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+	"name": "learning-nextjs",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"export": "next build && next export"
+	},
+	"dependencies": {
+		"next": "10.0.6",
+		"prop-types": "^15.7.2",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"styled-components": "^5.2.1"
+	},
+	"devDependencies": {
+		"babel-plugin-styled-components": "^1.12.0"
+	}
 }
